--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -3,6 +3,7 @@ $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
 $siteSetting = $this->plugin('siteSetting');
 $currentLocale = $this->siteSetting('locale') ?: 'en_US';
+$itemCount = count($this->attachments);
 ?>
 
 <div class="grix-x grid-container">
@@ -16,7 +17,7 @@ $currentLocale = $this->siteSetting('locale') ?: 'en_US';
 <div class="full-width-css background-colour-uom-footer">
     <div class="col-container col-media-container medium-padding-horizontal-1 large-padding-horizontal-2">
         <?php foreach ($attachments as $attachment): ?>
-            <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center">
+            <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center  item-count-<?php echo $itemCount; ?>">
                 <?php
                 $item = $attachment->item();
                 if ($item):
