--- a/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
@@ -32,13 +32,13 @@ $itemCount = count($this->attachments);
                 ?>
                         <?php $showTitleOption = $this->showTitleOption; ?>
                         <?php if ($showTitleOption == 'item_title'): ?>
-                            <div class="separator-center metadata">
-                                <h2 class="margin-top-2"><?php echo $item->displayTitle(); ?></h2>
-                            </div>
-                        <?php elseif ($showTitleOption == 'file_name'): ?>
-                            <div class="separator-center metadata">
-                                <h2 class="margin-top-2"><?php echo $media->displayTitle(); ?></h2>
-                            </div>
+                        <div class="separator-center metadata">
+                            <h2 class="margin-top-1 xlarge-margin-top-2"><?php echo $item->displayTitle(); ?></h2>
+                        </div>
+                    <?php elseif ($showTitleOption == 'file_name'): ?>
+                        <div class="separator-center metadata">
+                            <h2 class="margin-top-1 xlarge-margin-top-2"><?php echo $media->displayTitle(); ?></h2>
+                        </div>
                         <?php endif; ?>
                         <?php
                         $date = $item->value('dcterms:date');
