--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -29,24 +29,24 @@ $itemCount = count($this->attachments);
                 ]);
             endif;
             ?>
-                    <?php $showTitleOption = $this->showTitleOption; ?>
-                    <?php if ($showTitleOption == 'item_title'): ?>
-                        <div class="separator-center metadata">
-                            <h2 class="margin-top-2"><?php echo $item->displayTitle(); ?></h2>
-                        </div>
-                    <?php elseif ($showTitleOption == 'file_name'): ?>
-                        <div class="separator-center metadata">
-                            <h2 class="margin-top-2"><?php echo $media->displayTitle(); ?></h2>
-                        </div>
-                    <?php endif; ?>
-                <?php endif; ?>
-                <div class="margin-top-1 medium-margin-top-2">
-                    <?php
-                    $caption = $attachment->caption();             
-                    if ($caption):
-                        ?>
-                        <div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
-                    <?php endif; ?>
+                <?php $showTitleOption = $this->showTitleOption; ?>
+    <?php if ($showTitleOption == 'item_title'): ?>
+        <div class="separator-center metadata">
+            <h2 class="margin-top-1 xlarge-margin-top-2"><?php echo $item->displayTitle(); ?></h2>
+        </div>
+    <?php elseif ($showTitleOption == 'file_name'): ?>
+        <div class="separator-center metadata">
+            <h2 class="margin-top-1 xlarge-margin-top-2"><?php echo $media->displayTitle(); ?></h2>
+        </div>
+    <?php endif; ?>
+    <?php endif; ?>
+    <div class="margin-top-1 xlarge-margin-top-2">
+        <?php
+        $caption = $attachment->caption();             
+        if ($caption):
+            ?>
+            <div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+        <?php endif; ?>
             <div class="learn-more">
                 <?php if ($currentLocale == 'es'): ?>
                     <h2 class="button medium warning"><?php echo $item->link("Ver más"); ?></h2>
@@ -54,7 +54,7 @@ $itemCount = count($this->attachments);
                     <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
                 <?php endif; ?>
             </div>
-                </div>
+            </div>
         </div>
     <?php endforeach; ?>
 </div>
