Revised Item Showcase Openseadragon blocks

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1151,43 +1151,55 @@ display: none;
 
 /*Item Showcase Multiples*/ 
 .item-count-2 #storyboard_viewer.annonaview.storyboard_viewer {
+  @include breakpoint(medium) {
+    height: 60vh !important;
+  }
   @include breakpoint(large) {
     height: 65vh !important;
   }
 }
 .item-count-2 .seadragonbox {
+  @include breakpoint(medium) {
+    height: 60vh !important;
+  }
   @include breakpoint(large) {
     height: 65vh !important;
   }
 }
 .item-count-2 .seadragonbox .openseadragon-container {
+  @include breakpoint(medium) {
+    height: 60vh !important;
+  }
   @include breakpoint(large) {
     height: 65vh !important;
   }
 }
 .item-count-2 .openseadragon {
+  @include breakpoint(medium) {
+    height: 60vh !important;
+  }
   @include breakpoint(large) {
     height: 65vh !important;
   }
 }
 
 .item-count-3 #storyboard_viewer.annonaview.storyboard_viewer {
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     height: 50vh !important;
   }
 }
 .item-count-3 .seadragonbox {
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     height: 50vh !important;
   }
 }
 .item-count-3 .seadragonbox .openseadragon-container {
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     height: 50vh !important;
   }
 }
 .item-count-3 .openseadragon {
-  @include breakpoint(large) {
+  @include breakpoint(medium) {
     height: 50vh !important;
   }
 }
