--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -14,8 +14,8 @@ $itemCount = count($this->attachments);
     <?php endif; ?>
 </div>
 
-<div class="full-width-css background-colour-uom-footer">
-    <div class="col-container col-media-container medium-padding-horizontal-1 large-padding-horizontal-2">
+<div class="full-width-css background-colour-uom-footer padding-1 large-padding-2 xlarge-padding-3">
+    <div class="col-container col-media-container medium-padding-horizontal-1 large-padding-horizontal-2 grid-container">
         <?php foreach ($attachments as $attachment): ?>
             <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center  item-count-<?php echo $itemCount; ?>">
                 <?php
