--- a/view/common/block-layout/html-introduction-dark.phtml
+++ b/view/common/block-layout/html-introduction-dark.phtml
@@ -14,7 +14,7 @@ $escape = $this->plugin('escapeHtml');
         <?php if (!empty($heading)): ?>
         <h2><?= $escape($heading) ?></h2>
         <?php endif; ?>
-        <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 lead">
+        <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3">
             <?= $html ?>
         </div>
     </div>
