--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -4,9 +4,9 @@ $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 ?>
 
 <div class="media-embed-block <?php echo $this->alignmentClass . ' ' . $this->thumbnailType; ?> file">
-    <div class="attachments max-image-height flex-container align-center flex-dir-column padding-horizontal-1">
+    <div class="attachments max-image-height flex-container align-center flex-dir-column padding-horizontal-1 xlarge-padding-horizontal-3">
     <?php foreach($this->attachments as $attachment): ?>
-        <div class="item resource max-image-height flex-container align-center flex-dir-column">
+        <div class="item resource max-image-height flex-container align-middle flex-dir-column">
         <?php
         $item = $attachment->item();
         if ($item):
