--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -888,15 +888,16 @@ transform: scale(1.01);
       }
   }
   .image-xlarge {
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     @include breakpoint(medium) {
-      height: 90vh;
+      min-height: 90vh;
       }
     @include breakpoint(large) {
-      height: 85vh;
+      min-height: 85vh;
       }
     @include breakpoint(xlarge) {
-      height: 80vh;
+      min-height: 80vh;
       }
   }  
   .image-medium {
