--- a/view/common/block-layout/asset-hero-large-dark-central.phtml
+++ b/view/common/block-layout/asset-hero-large-dark-central.phtml
@@ -33,7 +33,7 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
     <div role="banner" class="hero-image image-xlarge region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.6)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if (!empty($heading)) : ?>
             <div class="grid-container grid-x flex-grow align-self-middle">
-                <div class="hero-title dark-background">
+                <div class="hero-title dark-background margin-vertical-1 large-margin-vertical-2">
                     <h1><?= $heading ?></h1>
                     <?php if ($attachment['caption'] !== ''): ?>
                         <h2 class="h4 padding-1 medium-padding-top-2">
