--- a/view/common/block-layout/html-content-warning.phtml
+++ b/view/common/block-layout/html-content-warning.phtml
@@ -9,15 +9,15 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="full-width-css padding-vertical-1 flex-container content-warning <?= $this->escapeHtmlAttr($divclass) ?>">
+<div class="full-width-css flex-container content-warning <?= $this->escapeHtmlAttr($divclass) ?>">
+    <div class="content-warning-panel flex-container align-center align-middle">
+        <i class="fas fa-exclamation-triangle"></i>
+    </div>
     <div class="grid-x grid-padding-x grid-container flex-container">
         <?php if (!empty($heading)): ?>
         <h2><?= $escape($heading) ?></h2>
         <?php endif; ?>
-        <div class="small-2 large-3 xlarge-2 padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 flex-container align-center content-warning-panel">
-            <i class="fas fa-exclamation-triangle"></i>
-        </div>
-        <div class="small-10 large-9 xlarge-10 padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 padding-left-1 medium-padding-left-2 large-padding-left-3">
+        <div class="content-warning-text small-10 large-9 xlarge-10 padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 padding-left-1 medium-padding-left-2 large-padding-left-3">
             <?= $html ?>
         </div>
     </div>
