--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -586,8 +586,12 @@ nav.breadcrumbs {
 
 .content-warning-panel {
   background-color: $dark-gray;
-  max-width: 90px;
   padding: 0 0.5 * $global-padding;
+  width: 100%;
+  min-height: 40px;
+  @include breakpoint(medium) {
+    max-width: 40px;
+  }
   @include breakpoint(large) {
     padding: 0 $global-padding;
   }
