--- a/view/common/block-layout/html-content-warning.phtml
+++ b/view/common/block-layout/html-content-warning.phtml
@@ -9,7 +9,7 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="full-width-css content-warning flex-container <?= $this->escapeHtmlAttr($divclass) ?>">
+<div class="content-warning flex-container flex-dir-column medium-flex-dir-row <?= $this->escapeHtmlAttr($divclass) ?>">
     <div class="content-warning-panel flex-container align-center align-middle">
         <i class="fas fa-exclamation-triangle"></i>
     </div>
