--- a/view/common/block-layout/html-content-warning.phtml
+++ b/view/common/block-layout/html-content-warning.phtml
@@ -17,7 +17,7 @@ $escape = $this->plugin('escapeHtml');
         <?php if (!empty($heading)): ?>
         <h2><?= $escape($heading) ?></h2>
         <?php endif; ?>
-        <div class="content-warning-text small-10 large-9 xlarge-10 padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 padding-left-1 medium-padding-left-2 large-padding-left-3">
+        <div class="content-warning-text padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 padding-left-1 medium-padding-left-2 large-padding-left-3">
             <?= $html ?>
         </div>
     </div>
