--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -7,7 +7,7 @@ $hyperlink = $this->plugin('hyperlink');
 ?>
 
 <div class="media-embed-block flex-container flex-dir-column align-middle <?php echo $this->escapeHtml(implode(' ', $classes)); ?> file">
-    <div class="attachments max-image-height">
+    <div class="attachments resource-text-openseadragon">
     <?php foreach($this->attachments as $attachment): ?>
         <?php $item = $attachment->item(); ?>
         <div class="item resource max-image-height flex-container flex-dir-column align-middle">
