--- a/view/common/block-template/asset-hero-large-dark-bottom.phtml
+++ b/view/common/block-template/asset-hero-large-dark-bottom.phtml
@@ -2,27 +2,53 @@
 
 /**
  * @var \Laminas\View\Renderer\PhpRenderer $this
- * @var array $assets Deprecated, alias of attachments.
- * @var string $heading
- * @var string $className
- * @var string $alignment
+ * @var array $attachments Contains keys:
+ *   - asset (AssetRepresentation)
+ *   - page (PageRepresentation)
+ *   - caption (string): the html is purified according to settings
+ *   - alt_link_title (string)
+ *
+ * The optional class, url and label may be set at start of caption like:
+ * ```
+ * url = https://example.org/
+ * class = xxx yyy
+ * label = Any zzz
+ * Next lines are the true caption, that may be raw text ot html.
+ * ```
+ *
+ * The string may be html.
+ * The url may be a local media file, for example `/files/original/xxx.pdf`.
+ * The label is used when there is no page, so no alt_link_title.
+ *
+ * @see \BlockPlus\View\Helper\AssetElement
+ * @uses \BlockPlus\View\Helper\CaptionClassAndUrl
  */
 
 // Note: this hero uses the classes and js of Twitter Bootstrap.
 // The hero uses a random asset.
 
+if (!count($attachments)) return;
+
+$attachment = $attachments[array_rand($attachments)];
+if (empty($attachment['asset'])) return;
+
 $plugins = $this->getHelperPluginManager();
 $escape = $plugins->get('escapeHtml');
 $escapeAttr = $plugins->get('escapeHtmlAttr');
-[$caption, $class, $url, $label, $isLocalUrl, $isMediaFile, $isHtmlCaption] = $this->captionClassAndUrl($attachment['caption']);
+
+// Manage minimal display when the module is disabled.
+$captionClassAndUrl = $plugins->get('captionClassAndUrl')
+    ? $plugins->get('captionClassAndUrl')
+    : fn($string) => [trim((string) $string), '', '', '', false, false, $string !== strip_tags($string)];
+
+$asset = $attachment['asset'];
+$page = $attachment['page'] ?? null;
+[$caption, $class, $url, $label, $isLocalUrl, $isMediaFile, $isHtmlCaption] = $captionClassAndUrl($attachment['caption'] ?? '');
+$title = strlen($attachment['alt_link_title']) ? $attachment['alt_link_title'] : ($page ? $page->title() : ($label ?: ($caption && $isHtmlCaption ? strip_tags($caption) : $caption)));
 ?>
 
-<?php if (!count($attachments)) return; ?>
-<?php $attachment = $attachments[array_rand($attachments)]; ?>
-<?php if (empty($attachment['asset'])) return; ?>
-
 <div class="full-width-css">
-    <div role="banner" class="hero-image image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.6)),url(<?= $attachment['asset']->assetUrl() ?>);">
+    <div role="banner" class="hero-image image-large region-splash flex-container" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.6)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if (!empty($heading)) : ?>
             <div class="grid-container grid-x flex-grow align-self-bottom">
                 <div class="hero-title dark-background">
