--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3028,18 +3028,35 @@ display: none;
   width: 100%;
 }
  
- @media print, screen and (min-width: 56.25em) {
+
  .block-blockGroup.resourceText:has(.layout-horizontal) {
+  @include breakpoint(large) {
     flex-direction: row;
  }
+}
  
  .resourceText .block-media:has(.layout-horizontal) {
+  @include breakpoint(large) {
     width: 58.3333333333%;
     flex-grow: 1;
     flex-shrink: 0;
   }
+}
+
+  .resourceText .block-media:has(.layout-vertical .openseadragon) {
+    width: 95vw;
+    margin: 0 auto;
+    @include breakpoint(medium) {
+      min-width: 80vw;
+    }
+    @include breakpoint(large) {
+    min-width: 50vw;
+    max-width: 700px;
+  }
+}
  
  .resourceText .block-html  {
+  @include breakpoint(large) {
     min-width: 41.6666666667%;
     flex-grow: 0;
     flex-shrink: 1;
