--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -7,7 +7,7 @@ $hyperlink = $this->plugin('hyperlink');
 ?>
 
 <div class="media-embed-block flex-container flex-dir-column align-middle <?php echo $this->escapeHtml(implode(' ', $classes)); ?> file">
-    <div class="attachments resource-text-openseadragon">
+    <div class="attachments resource-text-openseadragon flex-container">
     <?php foreach($this->attachments as $attachment): ?>
         <?php $item = $attachment->item(); ?>
         <div class="item resource max-image-height flex-container flex-dir-column align-middle">
@@ -38,20 +38,20 @@ $hyperlink = $this->plugin('hyperlink');
                 }
             endif;
         ?>
+        <?php
+            $caption = $attachment->caption();
+            if ($caption):
+            ?>
+            <div class="caption padding-1"><?php echo $caption; ?></div>
+        <?php endif; ?>
         <div class="metadata margin-vertical-1">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == 'item_title'): ?>
-            <h2><?php echo $item->displayTitle(); ?></h2>
+            <h2 class="h3"><?php echo $item->displayTitle(); ?></h2>
             <?php elseif ($showTitleOption == 'file_name'): ?>
-            <h2><?php echo $media->displayTitle(); ?></h2>
+            <h2 class="h3"><?php echo $media->displayTitle(); ?></h2>
             <?php endif; ?>
         </div>
-        <?php
-        $caption = $attachment->caption();
-        if ($caption):
-        ?>
-            <div class="caption padding-1"><?php echo $caption; ?></div>
-        <?php endif; ?>
         <div class="learn-more margin-bottom-1">
             <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
         </div>
